# The-Big-Cheese

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
client/: .gitignore  .prettierrc  package-lock.json  package.json  rollup.config.js  tailwind.config.cjs
client/src/: App.svelte  Create.svelte  Header.svelte  Home.svelte  hooks.ts
client/src/components/: ChangeableInput.svelte  RecipePreview.svelte
client/src/private/: PrivateRoute.svelte  PrivateRouteGuard.svelte
client/src/styles/: .gitignore
client/src/typescript/: error.ts  server.ts  token.ts
client/src/typescript/api/: recipe.ts  users.ts
client/src/user/: Account.svelte  Login.svelte  Register.svelte
docs/: README.md  architecture.md  running_server.md
server/: .dockerignore  .gitignore  Cargo.toml
server/src/: auth.rs  cors.rs  db_connection.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  test_util.rs
server/src/auth/: error.rs  middleware.rs  mod.rs
server/src/handlers/: mod.rs  recipes.rs  users.rs
src/: db.rs  db_connection.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: jwt.rs  mod.rs
src/handlers/: mod.rs  recipes.rs  users.rs
