[package]
name = "big_cheese_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = "0.5.6"
mongodb = "2.0.1"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = "1.18.2"
futures = "0.3.21"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tower-http = { version = "0.3.3", features = ["cors"] }
