[package]
name = "big_cheese_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = {git="https://github.com/tokio-rs/axum", branch="main"}
tower = "0.4.10"
mongodb = "2.0.1"
serde = "1.0.130"
tokio = "1.12.0"
futures = "0.3.17"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
bcrypt = "0.10.1"
uuid = {version="0.8.2", features=["v4", "serde"]}
chrono = {version="0.4.19", features=["serde"]}
rand = "0.8.4"
